Projects rename + added database to user context

--- a/WebApiSample.Api.21/HourRegistration.API.csproj
+++ b/WebApiSample.Api.21/HourRegistration.API.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WebApiSample.DataAccess\WebApiSample.DataAccess.csproj" />
+    <ProjectReference Include="..\WebApiSample.DataAccess\HourRegistration.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
