added frontend + initial configs

--- a/WebApiSample.DataAccess/HourRegistration.DataAccess.csproj
+++ b/WebApiSample.DataAccess/HourRegistration.DataAccess.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <ProjectUISubcaption>ASP.NET Core 2.1</ProjectUISubcaption>
   </PropertyGroup>
 
   <ItemGroup>
